@@ -23,13 +23,12 @@
 
 /*
  * @test
- * @bug      8225055 8239804
+ * @bug      8225055 8239804 8246774
  * @summary  Record types
  * @library  /tools/lib ../../lib
  * @modules jdk.javadoc/jdk.javadoc.internal.tool
  * @build    toolbox.ToolBox javadoc.tester.*
- * @compile --enable-preview --source ${jdk.version} TestRecordTypes.java
- * @run main/othervm --enable-preview TestRecordTypes
+ * @run main TestRecordTypes
  */
 
 
@@ -69,7 +68,6 @@ public class TestRecordTypes extends JavadocTester {
         javadoc("-d", base.resolve("out").toString(),
                 "-quiet", "-noindex",
                 "-sourcepath", src.toString(),
-                "--enable-preview", "--source", thisRelease,
                 src.resolve("R.java").toString());
         checkExit(Exit.OK);
 
@@ -77,7 +75,7 @@ public class TestRecordTypes extends JavadocTester {
                 """
                     <h1 title="Record R" class="title">Record R</h1>""",
                 """
-                    public record <span class="type-name-label">R</span>""",
+                    <span class="modifiers">public record </span><span class="element-name type-name-label">R</span>""",
                 """
                     <code><span class="member-name-link"><a href="#%3Cinit%3E(int)">R</a></span>&#8203;(int&nbsp;r1)</code>""");
     }
@@ -91,7 +89,6 @@ public class TestRecordTypes extends JavadocTester {
         javadoc("-d", base.resolve("out").toString(),
                 "-quiet", "-noindex",
                 "-sourcepath", src.toString(),
-                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
@@ -99,7 +96,7 @@ public class TestRecordTypes extends JavadocTester {
                 """
                     <h1 title="Record R" class="title">Record R</h1>""",
                 """
-                    public record <span class="type-name-label">R</span>""",
+                    <span class="modifiers">public record </span><span class="element-name type-name-label">R</span>""",
                 """
                     <code><span class="member-name-link"><a href="#%3Cinit%3E(int)">R</a></span>&#8203;(int&nbsp;r1)</code>""");
     }
@@ -113,7 +110,6 @@ public class TestRecordTypes extends JavadocTester {
         javadoc("-d", base.resolve("out").toString(),
                 "-quiet", "-noindex",
                 "-sourcepath", src.toString(),
-                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
@@ -121,7 +117,7 @@ public class TestRecordTypes extends JavadocTester {
                 """
                     <h1 title="Record R" class="title">Record R</h1>""",
                 """
-                    public record <span class="type-name-label">R</span>""",
+                    <span class="modifiers">public record </span><span class="element-name type-name-label">R</span>""",
                 """
                     <code><span class="member-name-link"><a href="#%3Cinit%3E()">R</a></span>()</code>""");
     }
@@ -139,7 +135,6 @@ public class TestRecordTypes extends JavadocTester {
         javadoc("-d", base.resolve("out").toString(),
                 "-quiet", "-noindex",
                 "-sourcepath", src.toString(),
-                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
@@ -147,7 +142,7 @@ public class TestRecordTypes extends JavadocTester {
                 """
                     <h1 title="Record R" class="title">Record R</h1>""",
                 """
-                    public record <span class="type-name-label">R</span>""",
+                    <span class="modifiers">public record </span><span class="element-name type-name-label">R</span>""",
                 """
                     <dl class="notes">
                     <dt>Record Components:</dt>
@@ -171,7 +166,6 @@ public class TestRecordTypes extends JavadocTester {
         javadoc("-d", base.resolve("out").toString(),
                 "-quiet", "-noindex",
                 "-sourcepath", src.toString(),
-                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
@@ -179,7 +173,7 @@ public class TestRecordTypes extends JavadocTester {
                 """
                     <h1 title="Record R" class="title">Record R&lt;T&gt;</h1>""",
                 """
-                    public record <span class="type-name-label">R&lt;T&gt;</span>""",
+                    <span class="modifiers">public record </span><span class="element-name type-name-label">R&lt;T&gt;</span>""",
                 """
                     <dl class="notes">
                     <dt>Type Parameters:</dt>
@@ -204,7 +198,6 @@ public class TestRecordTypes extends JavadocTester {
         javadoc("-d", base.resolve("out").toString(),
                 "-quiet", "-noindex",
                 "-sourcepath", src.toString(),
-                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
@@ -233,22 +226,22 @@ public class TestRecordTypes extends JavadocTester {
                 "Returns a string representation of this record.",
                 "Method Details",
                 """
-                    <span class="member-name">toString</span>""",
+                    <span class="element-name">toString</span>""",
                 "Returns a string representation of this record. The representation "
                 + "contains the name of the type, followed by the name and value of "
                 + "each of the record components.",
                 """
-                    <span class="member-name">hashCode</span>""",
+                    <span class="element-name">hashCode</span>""",
                 "Returns a hash code value for this object. The value is derived "
                 + "from the hash code of each of the record components.",
                 """
-                    <span class="member-name">equals</span>""",
+                    <span class="element-name">equals</span>""",
                 """
                     Indicates whether some other object is "equal to" this one. The objects are equa\
                     l if the other object is of the same class and if all the record components are \
                     equal. All components in this record are compared with '=='.""",
                 """
-                    <span class="member-name">r1</span>""",
+                    <span class="element-name">r1</span>""",
                 """
                     Returns the value of the <a href="#param-r1"><code>r1</code></a> record component."""
         );
@@ -268,7 +261,6 @@ public class TestRecordTypes extends JavadocTester {
                 "-quiet", "-noindex",
                 "-sourcepath", src.toString(),
                 "-linkoffline", externalDocs, localDocs,
-                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
@@ -297,22 +289,22 @@ public class TestRecordTypes extends JavadocTester {
                 "Returns a string representation of this record.",
                 "Method Details",
                 """
-                    <span class="member-name">toString</span>""",
+                    <span class="element-name">toString</span>""",
                 "Returns a string representation of this record. The representation "
                 + "contains the name of the type, followed by the name and value of "
                 + "each of the record components.",
                 """
-                    <span class="member-name">hashCode</span>""",
+                    <span class="element-name">hashCode</span>""",
                 "Returns a hash code value for this object. The value is derived "
                 + "from the hash code of each of the record components.",
                 """
-                    <span class="member-name">equals</span>""",
+                    <span class="element-name">equals</span>""",
                 """
                     Indicates whether some other object is "equal to" this one. The objects are equa\
                     l if the other object is of the same class and if all the record components are \
                     equal. All components in this record are compared with '=='.""",
                 """
-                    <span class="member-name">r1</span>""",
+                    <span class="element-name">r1</span>""",
                 """
                     Returns the value of the <a href="#param-r1"><code>r1</code></a> record component."""
         );
@@ -347,8 +339,8 @@ public class TestRecordTypes extends JavadocTester {
 
         javadoc("-d", base.resolve("out").toString(),
                 "-quiet", "-noindex",
+                "--no-platform-links",
                 "-sourcepath", src.toString(),
-                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
@@ -374,7 +366,6 @@ public class TestRecordTypes extends JavadocTester {
         javadoc("-d", base.resolve("out").toString(),
                 "-quiet", "-noindex",
                 "-sourcepath", src.toString(),
-                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
@@ -405,7 +396,6 @@ public class TestRecordTypes extends JavadocTester {
                 "-quiet", "-noindex",
                 "-sourcepath", testSrc.toString(),
                 "-linksource",
-                "--enable-preview", "--source", thisRelease,
                 "examples");
 
         checkExit(Exit.OK);
@@ -414,13 +404,11 @@ public class TestRecordTypes extends JavadocTester {
                 "-sourcepath", testSrc.toString(),
                 "-linksource",
                 "-linkoffline", externalDocs, localDocs,
-                "--enable-preview", "--source", thisRelease,
                 "examples");
         checkExit(Exit.OK);
     }
 
     @Test
-    @SuppressWarnings("preview")
     public void testAnnotations(Path base) throws IOException {
         ElementType[] types = {
                 ElementType.FIELD,
@@ -464,9 +452,9 @@ public class TestRecordTypes extends JavadocTester {
 
         javadoc("-d", dir.resolve("out").toString(),
                 "-quiet", "-noindex",
+                "--no-platform-links",
                 "-sourcepath", src.toString(),
                 "-private",
-                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
@@ -483,26 +471,27 @@ public class TestRecordTypes extends JavadocTester {
 
         checkOutput("p/R.html", true,
                 """
-                    <pre>public record <span class="type-name-label">R</span>("""
+                    <div class="type-signature"><span class="modifiers">public record </span><span c\
+                    lass="element-name type-name-label">R</span>("""
                         + rcAnno
                         + """
                             int&nbsp;i)
-                            extends java.lang.Record</pre>""",
+                            <span class="extends-implements">extends java.lang.Record</span></div>""",
                 "<div class=\"member-signature\">"
                         + fAnno
                         + """
                             <span class="modifiers">private final</span>&nbsp;<span class="return-type">int<\
-                            /span>&nbsp;<span class="member-name">i</span></div>""",
+                            /span>&nbsp;<span class="element-name">i</span></div>""",
                 """
                     <div class="member-signature"><span class="modifiers">public</span>&nbsp;<span c\
-                    lass="member-name">R</span>&#8203;<span class="parameters">("""
+                    lass="element-name">R</span>&#8203;<span class="parameters">("""
                         + pAnno
                         + "int&nbsp;i)</span></div>",
                 "<div class=\"member-signature\">"
                         + mAnno
                         + """
                             <span class="modifiers">public</span>&nbsp;<span class="return-type">int</span>&\
-                            nbsp;<span class="member-name">i</span>()</div>""");
+                            nbsp;<span class="element-name">i</span>()</div>""");
 
     }
 }
